--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,29 +1,48 @@
 .mySwiper {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .slide-content {
-    background-size: cover;
-    background-position: center;
-    height: 300px; /* Adjust the height as needed */
-  }
-  
-  .swiper-button-next, .swiper-button-prev {
-    color: #fff; /* Navigation arrow color */
-  }
-  
-  .swiper-pagination-bullet {
-    background: #fff; /* Pagination dot color */
-  }
-  
-  .swiper-pagination-bullet-active {
-    background: #ffcc00; /* Active pagination dot color */
-  }
-  
-  .swiper-slide {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
+  width: 100%;
+  height: 100%;
+}
+
+.slide-content {
+  background-size: cover;
+  background-position: center;
+  height: 300px; /* Adjust the height as needed */
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  color: #fff; /* Navigation arrow color */
+}
+
+.swiper-pagination-bullet {
+  background: #fff; /* Pagination dot color */
+}
+
+.swiper-pagination-bullet-active {
+  background: #ffcc00; /* Active pagination dot color */
+}
+
+.swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.magneto {
+  width: 8rem;
+  height: 8rem;
+
+  border: none;
+  border-radius: 50%;
+  color: #fff;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(1, 1, 1, 0.921); /* Initial color */
+  transition: background-image 1s ease; /* Smooth transition for background change */
+}
+
+.magneto:hover {
+  background: linear-gradient(to right, #475ce56f, #1e2a6a); /* Hover color */
+}
